adding the content of the homepage

--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,7 @@
                 <img src=Rich.jpg alt=“rich” class="photo">
             </figure>
             <h2>full stack dev</h2>
-            <p>Espoo, Finland</p>
+            <em>Espoo, Finland</em>
             <p>I am now a trainee in Integrify</p>
         </section>
         <section>
