add thead, tbody

--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
         <p>I am now a trainee in Integrify.</p>
         <h2>Place I have been</h2>
             <table>
-                <tr>
+                <thead>
+                    <tr>
                     <th>City</th>
                     <th>Country</th>
                     <th>Duration</th>
                 </tr>
-                <tr>
+                </thead>
+                <tbody>
+                    <tr>
                     <td>ChiaYi</td>
                     <td>Taiwan</td>
                     <td>20 years</td>
@@ -54,6 +57,8 @@
                     <td>Finland</td>
                     <td>1 year</td>
                 </tr>
+                </tbody>
+                
             </table>
     </header>
     <hr>
