modify form method to post

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <hr>
         <section id="contact">
             <h2>Let's connect</h2>
-            <form method="get">
+            <form method="post">
                 <div>
                     <label for="name">Your full name:</label><br>
                     <input type="text" id="name" name="name" placeholder="Jon Doe"><br>
